# agent-ops-cockpit

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AOC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  README.md  README_1.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh  package.json  pnpm-lock.yaml  walkthrough.md
.aoc/: context.md  effective-agent-contract.md  init-state.json  lexicon.md  managed-assets.json  memory.md  mind-service.json  omarchy-migration-backup-path  rtk.toml  search.toml
.aoc/dox/: budgets.json  candidates.json  eval-matrix.json  map.json  report.md  review.md  routes.json
.aoc/insight/: README.md  current.md  index.md  insights.md
.aoc/layouts/: design.kdl  design.kdl.aoc-managed  mission-control.kdl
.aoc/map/: README.md  index.html  manifest.json
.aoc/open-design/: link.json
.aoc/prompts/: omp-low-token.md
.aoc/skills/: .aoc-no-default-seed  manifest.toml
.aoc/stm/: current.md
.gemini/: GEMINI.md  memory.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  installer-smoke.yml  lint.yml  release-installer.yml
.omp/: manifest.toml  manifest.toml.aoc-managed
.omp/agents/: .aoc-managed  brand-concept.md  brand-strategy.md  dox-critic.md  dox-mapper.md  dox-scout.md  dox-writer.md  hyperframes-content.md  svg-asset.md
.omp/extensions/: .aoc-managed  AGENTS.md  aoc-brand-content.ts  aoc-codegraph.ts  aoc-commit.ts  aoc-dox-command.ts  aoc-dox.ts  aoc-herdr.ts  aoc-jj-init.ts  aoc-master.ts  aoc-mind.ts  aoc-openai-stt.ts  (+6 more)
.pi/: aoc-models.json  settings.json
.taskmaster/: state.json
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
ClockTemp/: .gitignore  README.md  requirements.txt
config/: btop.conf  codex-tmux.conf
crates/: Cargo.toml
crates/aoc-agent-wrap-rs/: Cargo.toml
crates/aoc-agent-wrap-rs/src/: AGENTS.md  insight_orchestrator.rs  main.rs
crates/aoc-cli/: AGENTS.md  Cargo.toml
crates/aoc-cli/assets/: render-mermaid.js
crates/aoc-cli/src/: dox.rs  insight.rs  main.rs  map.rs  overseer.rs  rlm.rs  see.rs  task.rs
crates/aoc-control/: Cargo.toml
crates/aoc-control/src/: main.rs
crates/aoc-core/: Cargo.toml
crates/aoc-core/src/: AGENTS.md  consultation_contracts.rs  insight_contracts.rs  lib.rs  mind_contracts.rs  mind_observer_feed.rs  provenance_contracts.rs  pulse_ipc.rs  session_overseer.rs  zellij_cli.rs
crates/aoc-hub-rs/: Cargo.toml
crates/aoc-hub-rs/src/: AGENTS.md  main.rs  pulse_uds.rs
crates/aoc-installer/: Cargo.toml
crates/aoc-installer/src/: AGENTS.md  main.rs
crates/aoc-mind/: Cargo.toml
crates/aoc-mind/src/: AGENTS.md  compatibility_queries.rs  ingest.rs  lib.rs  observer_runtime.rs  query.rs  reflector_runtime.rs  render.rs  retrieval.rs  runtime.rs  standalone.rs  t1.rs  t3_runtime.rs  tests.rs
crates/aoc-mind/tests/: semantic_runtime_integration.rs
crates/aoc-mission-control/: Cargo.toml
crates/aoc-mission-control/src/: AGENTS.md  app.rs  collectors.rs  config.rs  consultation_memory.rs  diff.rs  fleet.rs  health.rs  hub.rs  input.rs  main.rs  mind_artifact_drilldown.rs  mind_glue.rs  mind_host_render.rs  mind_summary_render.rs  ops.rs  overseer.rs  overseer_consultation.rs  overseer_ops_render.rs  overseer_worker_render.rs  overview.rs  overview_support.rs  render_host.rs  shared_render.rs  source_parse.rs  tests.rs  theme.rs  wire.rs  work.rs
crates/aoc-opencode-adapter/: Cargo.toml
crates/aoc-opencode-adapter/src/: AGENTS.md  lib.rs
crates/aoc-pi-adapter/: Cargo.toml
crates/aoc-pi-adapter/src/: AGENTS.md  lib.rs
crates/aoc-segment-routing/: Cargo.toml
crates/aoc-segment-routing/src/: AGENTS.md  lib.rs
crates/aoc-storage/: Cargo.toml
crates/aoc-storage/migrations/: 0001_mind_schema.sql  0002_semantic_runtime.sql  0003_reflector_runtime.sql  0004_session_conversation_tree.sql  0005_project_mind_v2.sql  0006_compaction_checkpoints.sql  0007_artifact_file_links.sql  0008_compaction_slices_t0.sql  0009_detached_insight_jobs.sql  0010_detached_insight_job_hierarchy.sql  0011_detached_insight_job_results.sql  0012_compaction_checkpoint_entry_scope.sql
crates/aoc-storage/src/: AGENTS.md  lib.rs
crates/aoc-task-attribution/: Cargo.toml
crates/aoc-task-attribution/src/: AGENTS.md  lib.rs
crates/aoc-taskmaster/: Cargo.toml
crates/aoc-taskmaster/src/: AGENTS.md  main.rs  state.rs  theme.rs  ui.rs
crates/aoc-yazi-mermaid/: Cargo.toml
crates/aoc-yazi-mermaid/src/: AGENTS.md  main.rs
docs/: ARCHITECTURE.md  agent-extensibility.md  agents.md  aoc-feature-inventory.md  aoc-map.md  aoc-see.md  commit-intelligence.md  configuration.md  control-pane.md  deprecations.md  dox-cartography.md  feature-upgrade-collection-key.md  herdr-workspace.md  html-video.md  hyperframes.md  implementation-status-checklist.md  index.md  insight-compaction-ingest.md  insight-subagent-orchestration.md  insight-t3-alignment.md  installation-details.md  installation.md  layouts.md  managed-assets.md  mind-background-reliability-checklist.md  mind-runtime-validation.md  mind-v2-architecture-cutover-checklist.md  mission-control-ops.md  mission-control.md  moremotion.md  omo-regression-checklist.md  open-design.md  phase2-module-plan.md  pi-only-rollout-checklist.md  presets.md  pulse-ipc-protocol.md  pulse-vnext-rollout.md  quickstart.md  skills.md  subagent-runtime.md  (+6 more)
herdr/: config.toml
install/: bootstrap.sh
micro/: bindings.json
plugins/aoc-watcher/: Cargo.toml
plugins/aoc-watcher/src/: main.rs
scripts/: build-taskmaster-plugin.sh  build-watcher.sh  lint.sh  smoke.sh  test-aoc-brand-content-pipeline.sh  test-aoc-codegraph-omp-surface.sh  test-aoc-herdr-services.sh  test-aoc-omp-canonical.sh  test-aoc-omp-context.sh  test-aoc-omp-patch.sh  test-aoc-profile.sh  test-aoc-state-jj.sh  test-web-research-stack.sh  verify-mind-runtime-safety.sh
yazi/: init.lua  keymap.toml  preview.sh  theme.toml  yazi.toml
zellij/: aoc.config.kdl  aoc.config.kdl.template
(+492 files in other folders)
