[workspace]
members = [
    "aoc-installer",
    "aoc-cli",
    "aoc-core",
    "aoc-storage",
    "aoc-pi-adapter",
    "aoc-task-attribution",
    "aoc-segment-routing",
    "aoc-mind",
    "aoc-hub-rs",
    "aoc-agent-wrap-rs",
    "aoc-control",
    "aoc-mission-control",
    "aoc-taskmaster",
    "aoc-yazi-mermaid",
]
exclude = [
    "aoc-opencode-adapter",
]
resolver = "2"
