[package]
name = "aoc-agent-wrap-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aoc-core = { path = "../aoc-core" }
aoc-mind = { path = "../aoc-mind" }
aoc-storage = { path = "../aoc-storage" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
notify = "6.1"
portable-pty = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["fs", "io-std", "io-util", "rt-multi-thread", "macros", "process", "signal", "sync", "time"] }
tokio-tungstenite = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
