[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aoc-core = { path = "../aoc-core" }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
globset = "0.4"
ignore = "0.4"
