[package]
name = "aoc-mind"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aoc-core = { path = "../aoc-core" }
aoc-pi-adapter = { path = "../aoc-pi-adapter" }
aoc-storage = { path = "../aoc-storage" }
aoc-task-attribution = { path = "../aoc-task-attribution" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
fs2 = "0.4.3"
ratatui = "0.26"

[dev-dependencies]
