[package]
name = "aoc-pi-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aoc-core = { path = "../aoc-core" }
aoc-storage = { path = "../aoc-storage" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3.10"
