[package]
name = "aoc-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aoc-core = { path = "../aoc-core" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
