[package]
name = "aoc-yazi-mermaid"
version = "0.1.0"
edition = "2021"
description = "Cached Mermaid previews for Yazi using mermaid-rs-renderer"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
mermaid-rs-renderer = { version = "0.2.1", default-features = false, features = ["png"] }
sha2 = "0.10"
