[package]
name = "aoc-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
ignore = "0.4"
